--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
       </h3>
       
-      <p>My vision is to create a community where women in offensive security stop feeling stuck between knowing cyber and doing cyber, where hands-on experience builds portfolios that don't just showcase skills, but will open doors for you, yes you whose reading this.</p>
+      <p>My vision is to create a community, Black Widow, where women in offensive security stop feeling stuck between knowing cyber and doing cyber, where hands-on experience builds portfolios that don't just showcase skills, but will open doors for you, yes you whose reading this.</p>
       <br>
       <p>My mission is to bridge the gap between theory and the real world, while creating accountability that transforms inconsistent learning into inevitable growth.</p>
       <br>
@@ -184,6 +184,7 @@
 
 </body>
 </html>
+
 
 
 
